<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
	android:layout_width="match_parent" android:orientation="vertical"
	android:layout_height="wrap_content" android:padding="5dp">
	<EditText android:layout_height="wrap_content"
		android:layout_width="match_parent" android:id="@+id/password_text"
        android:filterTouchesWhenObscured="true"
		android:hint="@string/password_hint" android:inputType="textPassword"/>
	<EditText android:layout_height="wrap_content"
        android:filterTouchesWhenObscured="true"
		android:layout_width="match_parent" android:id="@+id/password_verification_text"
		android:hint="@string/password_verification_hint" android:inputType="textPassword"/>
	<LinearLayout android:layout_height="wrap_content"
		android:layout_width="match_parent">
		<Button android:layout_height="wrap_content" android:text="@string/ok_button"
			android:layout_width="match_parent" android:id="@+id/ok_button"
			android:layout_weight="1" />
		<Button android:layout_height="wrap_content" android:text="@string/cancel_button"
			android:layout_width="match_parent" android:id="@+id/cancel_button"
			android:layout_weight="1" />
	</LinearLayout>
</LinearLayout>
